# FileManager

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AppManager.cpp  AppManager.h  CMakeLists.txt  ScopedEnv.h  api.cpp  api.h  emma.cpp  jni_imageutils.cpp  rgb2yuv.cpp  rgb2yuv.h  types.h  utils.cpp  utils.h  yuv2rgb.cpp  yuv2rgb.h
app/src/main/res/anim/: fade_in.xml  fade_out.xml  jump_from_left.xml  jump_from_right.xml  jump_from_top.xml  jump_to_down.xml  jump_to_left.xml  jump_to_right.xml  jump_to_top.xml  pull_in_down.xml  scale_down_in.xml  scale_down_out.xml  scale_up_in.xml  scale_up_out.xml  slide_down_in.xml  slide_down_out.xml  (+2 more)
gradle/wrapper/: gradle-wrapper.properties
note/: doc.xlsx  emmaKey.jks  emma_database.vsd  init language.txt  key note.txt
note/api/: .env
note/api/app/Http/: Kernel.php
note/api/app/Mail/: CodeEmail.php
note/api/app/Model/: AddressBook.php  Avatar.php  Bill.php  BillFile.php  BillItem.php  Contact.php  ErrorTracking.php  FileApp.php  Job.php  JobFile.php  Language.php  MailBook.php  Note.php  NoteFile.php  Option.php  Password.php  PaymentService.php  PhoneBook.php  Product.php  ProductFile.php  ProductPrice.php  Profile.php  RequestException.php  Session.php  Supplier.php  SupplierContaction.php  SupplierFile.php  UserApp.php  WebsiteBook.php
note/api/app/Providers/: RouteServiceProvider.php
note/api/config/: app.php  filesystems.php  mail.php  session.php
note/api/routes/: api.php  web.php
note/api/tests/: .env
(+372 files in other folders)
